--- a/style.css
+++ b/style.css
@@ -295,6 +295,24 @@ h3 {
 /*                                              Gallerie                                                */
 /* ---------------------------------------------------------------------------------------------------- */
 
+.videos {
+    width: var(--width);
+    
+    margin-top: var(--margin);
+    margin-bottom: var(--margin);
+
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+
+    gap: 20px;
+}
+
+.videos video {
+    width: calc((100% - 40px) / 3);
+}
+
 .gallery-container {
     margin-top: var(--margin);
 }
@@ -317,7 +335,7 @@ h3 {
     gap: 20px
 }
 
-.gallery img {
+.gallery img, .gallery video{
     width: 100%;
     height: 100%;
 
@@ -329,7 +347,7 @@ h3 {
     cursor: pointer;
 }
 
-.gallery img:hover {
+.gallery img:hover, .gallery video:hover {
     transform: scale(1.03);
 }
 
@@ -342,7 +360,7 @@ h3 {
     width: 100%;
 
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: left;
 }
 
@@ -375,15 +393,8 @@ h3 {
     cursor: default;
 }
 
-.contact-container-left iframe {
-    width: 500px;
-    height: 400px;
-
-    margin-top: 35px;
-}
-
-.contact-container-right {
-    margin-left: 50px;
+.contact-container h1 {
+    margin-top: var(--margin);
 }
 
 
@@ -531,10 +542,6 @@ h4 {
         width: 100%;
     }
 
-    .contact-container-left iframe {
-        width: 400px;
-    }
-
     .imprint-head {
         font-size: 28px;
     }
@@ -553,25 +560,25 @@ h4 {
         justify-content: center;
     }
 
+    .videos {
+        flex-direction: column;
+    }
+
+    .videos video {
+        width: 100%;
+    }
+
     .gallery {
         flex-direction: column;
     }
 
-    .gallery img:hover {
+    .gallery img:hover, .gallery video:hover {
         transform: none;
     }
 
     .contact-container {
-        flex-direction: column-reverse;
         align-items: center;
         justify-content: left;
-    }
-
-    .contact-container-right {
-        width: var(--width);
-
-        margin-left: 0;
-        justify-content: space-between;
     }
 
     .contact-item {
@@ -583,11 +590,6 @@ h4 {
     .contact-item-txt {
         margin-top: 0;
         text-align: right;
-    }
-
-    .contact-container-left iframe {
-        width: var(--width);
-        height: 300px;
     }
 }
 
